@@ -8,7 +8,7 @@
 <body>
 
 <!-- ###MY_GROUPS### begin -->
-
+###PAGEBROWSER###
 <ul>
 	<!-- ###LOOP:GROUPS### begin -->
 	<!-- ###LOOP_CONTENT### -->
