@@ -1,3 +1,7 @@
+2009-04-14 Frank Naegler <typo3@naegler.net>
+
+	* adding pagebrowser for the myGroups Widget
+
 2009-04-08 Frank Naegler <typo3@naegler.net>
 
 	* change process of removing admin on group model
